etapa4/parser/parser.output
Terminals unused in grammar

    "type"
    "error"


Grammar

    0 $accept: program $end

    1 program: global_escope_init list global_escope_end ';'

    2 global_escope_init: ε

    3 global_escope_end: ε

    4 list: element
    5     | element ',' list

    6 element: function_definition
    7        | variable_declaration

    8 function_definition: header body

    9 header: "identifier" "->" var_type optional_parameter_list ":="

   10 optional_parameter_list: ε
   11                        | "with" parameter_list
   12                        | parameter_list

   13 parameter_list: parameter
   14               | parameter_list ',' parameter

   15 parameter: "identifier" ":=" var_type

   16 body: command_block

   17 command_block: '[' command_sequence ']'
   18              | '[' ']'

   19 command_sequence: simple_command
   20                 | simple_command command_sequence

   21 simple_command: variable_declaration_with_instantiation
   22               | function_call
   23               | attribution_command
   24               | return_command
   25               | flow_control_command
   26               | command_block

   27 variable_declaration: "variable" "identifier" ":=" var_type

   28 variable_declaration_with_instantiation: "variable" "identifier" ":=" var_type optional_instantiation

   29 var_type: "decimal"
   30         | "integer"

   31 optional_instantiation: "with" literal
   32                       | ε

   33 literal: "integer literal"
   34        | "decimal literal"

   35 attribution_command: "identifier" ":=" expression

   36 function_call: "identifier" '(' args ')'

   37 args: expression
   38     | expression ',' args
   39     | ε

   40 return_command: "return" expression ":=" var_type

   41 flow_control_command: conditional_struct
   42                     | iterative_struct

   43 conditional_struct: "if" '(' expression ')' command_block else_block

   44 else_block: "else" command_block
   45           | ε

   46 iterative_struct: "while" '(' expression ')' command_block

   47 expression: logical_or_expression

   48 logical_or_expression: logical_and_expression
   49                      | logical_or_expression '|' logical_and_expression

   50 logical_and_expression: equality_expression
   51                       | logical_and_expression '&' equality_expression

   52 equality_expression: relational_expression
   53                    | equality_expression "==" relational_expression
   54                    | equality_expression "!=" relational_expression

   55 relational_expression: additive_expression
   56                      | relational_expression '<' additive_expression
   57                      | relational_expression '>' additive_expression
   58                      | relational_expression "<=" additive_expression
   59                      | relational_expression ">=" additive_expression

   60 additive_expression: multiplicative_expression
   61                    | additive_expression '+' multiplicative_expression
   62                    | additive_expression '-' multiplicative_expression

   63 multiplicative_expression: unary_expression
   64                          | multiplicative_expression '*' unary_expression
   65                          | multiplicative_expression '/' unary_expression
   66                          | multiplicative_expression '%' unary_expression

   67 unary_expression: primary_expression
   68                 | '!' unary_expression
   69                 | '+' unary_expression
   70                 | '-' unary_expression

   71 primary_expression: "identifier"
   72                   | "integer literal"
   73                   | "decimal literal"
   74                   | '(' expression ')'
   75                   | function_call


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 68
    '%' (37) 66
    '&' (38) 51
    '(' (40) 36 43 46 74
    ')' (41) 36 43 46 74
    '*' (42) 64
    '+' (43) 61 69
    ',' (44) 5 14 38
    '-' (45) 62 70
    '/' (47) 65
    ';' (59) 1
    '<' (60) 56
    '>' (62) 57
    '[' (91) 17 18
    ']' (93) 17 18
    '|' (124) 49
    error (256)
    "type" (258)
    "variable" (259) 27 28
    "else" (260) 44
    "decimal" (261) 29
    "if" (262) 43
    "integer" (263) 30
    ":=" (264) 9 15 27 28 35 40
    "return" (265) 40
    "->" (266) 9
    "while" (267) 46
    "with" (268) 11 31
    "<=" (269) 58
    ">=" (270) 59
    "==" (271) 53
    "!=" (272) 54
    "identifier" <lexical_value> (273) 9 15 27 28 35 36 71
    "integer literal" <lexical_value> (274) 33 72
    "decimal literal" <lexical_value> (275) 34 73
    "error" (276)


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    program <node> (39)
        on left: 1
        on right: 0
    global_escope_init <node> (40)
        on left: 2
        on right: 1
    global_escope_end <node> (41)
        on left: 3
        on right: 1
    list <node> (42)
        on left: 4 5
        on right: 1 5
    element <node> (43)
        on left: 6 7
        on right: 4 5
    function_definition <node> (44)
        on left: 8
        on right: 6
    header <node> (45)
        on left: 9
        on right: 8
    optional_parameter_list <node> (46)
        on left: 10 11 12
        on right: 9
    parameter_list <node> (47)
        on left: 13 14
        on right: 11 12 14
    parameter <node> (48)
        on left: 15
        on right: 13 14
    body <node> (49)
        on left: 16
        on right: 8
    command_block <node> (50)
        on left: 17 18
        on right: 16 26 43 44 46
    command_sequence <node> (51)
        on left: 19 20
        on right: 17 20
    simple_command <node> (52)
        on left: 21 22 23 24 25 26
        on right: 19 20
    variable_declaration <node> (53)
        on left: 27
        on right: 7
    variable_declaration_with_instantiation <node> (54)
        on left: 28
        on right: 21
    var_type <lexical_value> (55)
        on left: 29 30
        on right: 9 15 27 28 40
    optional_instantiation <node> (56)
        on left: 31 32
        on right: 28
    literal <node> (57)
        on left: 33 34
        on right: 31
    attribution_command <node> (58)
        on left: 35
        on right: 23
    function_call <node> (59)
        on left: 36
        on right: 22 75
    args <node> (60)
        on left: 37 38 39
        on right: 36 38
    return_command <node> (61)
        on left: 40
        on right: 24
    flow_control_command <node> (62)
        on left: 41 42
        on right: 25
    conditional_struct <node> (63)
        on left: 43
        on right: 41
    else_block <node> (64)
        on left: 44 45
        on right: 43
    iterative_struct <node> (65)
        on left: 46
        on right: 42
    expression <node> (66)
        on left: 47
        on right: 35 37 38 40 43 46 74
    logical_or_expression <node> (67)
        on left: 48 49
        on right: 47 49
    logical_and_expression <node> (68)
        on left: 50 51
        on right: 48 49 51
    equality_expression <node> (69)
        on left: 52 53 54
        on right: 50 51 53 54
    relational_expression <node> (70)
        on left: 55 56 57 58 59
        on right: 52 53 54 56 57 58 59
    additive_expression <node> (71)
        on left: 60 61 62
        on right: 55 56 57 58 59 61 62
    multiplicative_expression <node> (72)
        on left: 63 64 65 66
        on right: 60 61 62 64 65 66
    unary_expression <node> (73)
        on left: 67 68 69 70
        on right: 63 64 65 66 68 69 70
    primary_expression <node> (74)
        on left: 71 72 73 74 75
        on right: 67


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (global_escope_init)

    program             go to state 1
    global_escope_init  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: global_escope_init • list global_escope_end ';'

    "variable"    shift, and go to state 4
    "identifier"  shift, and go to state 5

    list                  go to state 6
    element               go to state 7
    function_definition   go to state 8
    header                go to state 9
    variable_declaration  go to state 10


State 3

    0 $accept: program $end •

    $default  accept


State 4

   27 variable_declaration: "variable" • "identifier" ":=" var_type

    "identifier"  shift, and go to state 11


State 5

    9 header: "identifier" • "->" var_type optional_parameter_list ":="

    "->"  shift, and go to state 12


State 6

    1 program: global_escope_init list • global_escope_end ';'

    $default  reduce using rule 3 (global_escope_end)

    global_escope_end  go to state 13


State 7

    4 list: element •
    5     | element • ',' list

    ','  shift, and go to state 14

    $default  reduce using rule 4 (list)


State 8

    6 element: function_definition •

    $default  reduce using rule 6 (element)


State 9

    8 function_definition: header • body

    '['  shift, and go to state 15

    body           go to state 16
    command_block  go to state 17


State 10

    7 element: variable_declaration •

    $default  reduce using rule 7 (element)


State 11

   27 variable_declaration: "variable" "identifier" • ":=" var_type

    ":="  shift, and go to state 18


State 12

    9 header: "identifier" "->" • var_type optional_parameter_list ":="

    "decimal"  shift, and go to state 19
    "integer"  shift, and go to state 20

    var_type  go to state 21


State 13

    1 program: global_escope_init list global_escope_end • ';'

    ';'  shift, and go to state 22


State 14

    5 list: element ',' • list

    "variable"    shift, and go to state 4
    "identifier"  shift, and go to state 5

    list                  go to state 23
    element               go to state 7
    function_definition   go to state 8
    header                go to state 9
    variable_declaration  go to state 10


State 15

   17 command_block: '[' • command_sequence ']'
   18              | '[' • ']'

    "variable"    shift, and go to state 24
    "if"          shift, and go to state 25
    "return"      shift, and go to state 26
    "while"       shift, and go to state 27
    "identifier"  shift, and go to state 28
    '['           shift, and go to state 15
    ']'           shift, and go to state 29

    command_block                            go to state 30
    command_sequence                         go to state 31
    simple_command                           go to state 32
    variable_declaration_with_instantiation  go to state 33
    attribution_command                      go to state 34
    function_call                            go to state 35
    return_command                           go to state 36
    flow_control_command                     go to state 37
    conditional_struct                       go to state 38
    iterative_struct                         go to state 39


State 16

    8 function_definition: header body •

    $default  reduce using rule 8 (function_definition)


State 17

   16 body: command_block •

    $default  reduce using rule 16 (body)


State 18

   27 variable_declaration: "variable" "identifier" ":=" • var_type

    "decimal"  shift, and go to state 19
    "integer"  shift, and go to state 20

    var_type  go to state 40


State 19

   29 var_type: "decimal" •

    $default  reduce using rule 29 (var_type)


State 20

   30 var_type: "integer" •

    $default  reduce using rule 30 (var_type)


State 21

    9 header: "identifier" "->" var_type • optional_parameter_list ":="

    "with"        shift, and go to state 41
    "identifier"  shift, and go to state 42

    $default  reduce using rule 10 (optional_parameter_list)

    optional_parameter_list  go to state 43
    parameter_list           go to state 44
    parameter                go to state 45


State 22

    1 program: global_escope_init list global_escope_end ';' •

    $default  reduce using rule 1 (program)


State 23

    5 list: element ',' list •

    $default  reduce using rule 5 (list)


State 24

   28 variable_declaration_with_instantiation: "variable" • "identifier" ":=" var_type optional_instantiation

    "identifier"  shift, and go to state 46


State 25

   43 conditional_struct: "if" • '(' expression ')' command_block else_block

    '('  shift, and go to state 47


State 26

   40 return_command: "return" • expression ":=" var_type

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    expression                 go to state 56
    logical_or_expression      go to state 57
    logical_and_expression     go to state 58
    equality_expression        go to state 59
    relational_expression      go to state 60
    additive_expression        go to state 61
    multiplicative_expression  go to state 62
    unary_expression           go to state 63
    primary_expression         go to state 64


State 27

   46 iterative_struct: "while" • '(' expression ')' command_block

    '('  shift, and go to state 65


State 28

   35 attribution_command: "identifier" • ":=" expression
   36 function_call: "identifier" • '(' args ')'

    ":="  shift, and go to state 66
    '('   shift, and go to state 67


State 29

   18 command_block: '[' ']' •

    $default  reduce using rule 18 (command_block)


State 30

   26 simple_command: command_block •

    $default  reduce using rule 26 (simple_command)


State 31

   17 command_block: '[' command_sequence • ']'

    ']'  shift, and go to state 68


State 32

   19 command_sequence: simple_command •
   20                 | simple_command • command_sequence

    "variable"    shift, and go to state 24
    "if"          shift, and go to state 25
    "return"      shift, and go to state 26
    "while"       shift, and go to state 27
    "identifier"  shift, and go to state 28
    '['           shift, and go to state 15

    $default  reduce using rule 19 (command_sequence)

    command_block                            go to state 30
    command_sequence                         go to state 69
    simple_command                           go to state 32
    variable_declaration_with_instantiation  go to state 33
    attribution_command                      go to state 34
    function_call                            go to state 35
    return_command                           go to state 36
    flow_control_command                     go to state 37
    conditional_struct                       go to state 38
    iterative_struct                         go to state 39


State 33

   21 simple_command: variable_declaration_with_instantiation •

    $default  reduce using rule 21 (simple_command)


State 34

   23 simple_command: attribution_command •

    $default  reduce using rule 23 (simple_command)


State 35

   22 simple_command: function_call •

    $default  reduce using rule 22 (simple_command)


State 36

   24 simple_command: return_command •

    $default  reduce using rule 24 (simple_command)


State 37

   25 simple_command: flow_control_command •

    $default  reduce using rule 25 (simple_command)


State 38

   41 flow_control_command: conditional_struct •

    $default  reduce using rule 41 (flow_control_command)


State 39

   42 flow_control_command: iterative_struct •

    $default  reduce using rule 42 (flow_control_command)


State 40

   27 variable_declaration: "variable" "identifier" ":=" var_type •

    $default  reduce using rule 27 (variable_declaration)


State 41

   11 optional_parameter_list: "with" • parameter_list

    "identifier"  shift, and go to state 42

    parameter_list  go to state 70
    parameter       go to state 45


State 42

   15 parameter: "identifier" • ":=" var_type

    ":="  shift, and go to state 71


State 43

    9 header: "identifier" "->" var_type optional_parameter_list • ":="

    ":="  shift, and go to state 72


State 44

   12 optional_parameter_list: parameter_list •
   14 parameter_list: parameter_list • ',' parameter

    ','  shift, and go to state 73

    $default  reduce using rule 12 (optional_parameter_list)


State 45

   13 parameter_list: parameter •

    $default  reduce using rule 13 (parameter_list)


State 46

   28 variable_declaration_with_instantiation: "variable" "identifier" • ":=" var_type optional_instantiation

    ":="  shift, and go to state 74


State 47

   43 conditional_struct: "if" '(' • expression ')' command_block else_block

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    expression                 go to state 75
    logical_or_expression      go to state 57
    logical_and_expression     go to state 58
    equality_expression        go to state 59
    relational_expression      go to state 60
    additive_expression        go to state 61
    multiplicative_expression  go to state 62
    unary_expression           go to state 63
    primary_expression         go to state 64


State 48

   36 function_call: "identifier" • '(' args ')'
   71 primary_expression: "identifier" •

    '('  shift, and go to state 67

    $default  reduce using rule 71 (primary_expression)


State 49

   72 primary_expression: "integer literal" •

    $default  reduce using rule 72 (primary_expression)


State 50

   73 primary_expression: "decimal literal" •

    $default  reduce using rule 73 (primary_expression)


State 51

   74 primary_expression: '(' • expression ')'

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    expression                 go to state 76
    logical_or_expression      go to state 57
    logical_and_expression     go to state 58
    equality_expression        go to state 59
    relational_expression      go to state 60
    additive_expression        go to state 61
    multiplicative_expression  go to state 62
    unary_expression           go to state 63
    primary_expression         go to state 64


State 52

   69 unary_expression: '+' • unary_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call       go to state 55
    unary_expression    go to state 77
    primary_expression  go to state 64


State 53

   70 unary_expression: '-' • unary_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call       go to state 55
    unary_expression    go to state 78
    primary_expression  go to state 64


State 54

   68 unary_expression: '!' • unary_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call       go to state 55
    unary_expression    go to state 79
    primary_expression  go to state 64


State 55

   75 primary_expression: function_call •

    $default  reduce using rule 75 (primary_expression)


State 56

   40 return_command: "return" expression • ":=" var_type

    ":="  shift, and go to state 80


State 57

   47 expression: logical_or_expression •
   49 logical_or_expression: logical_or_expression • '|' logical_and_expression

    '|'  shift, and go to state 81

    $default  reduce using rule 47 (expression)


State 58

   48 logical_or_expression: logical_and_expression •
   51 logical_and_expression: logical_and_expression • '&' equality_expression

    '&'  shift, and go to state 82

    $default  reduce using rule 48 (logical_or_expression)


State 59

   50 logical_and_expression: equality_expression •
   53 equality_expression: equality_expression • "==" relational_expression
   54                    | equality_expression • "!=" relational_expression

    "=="  shift, and go to state 83
    "!="  shift, and go to state 84

    $default  reduce using rule 50 (logical_and_expression)


State 60

   52 equality_expression: relational_expression •
   56 relational_expression: relational_expression • '<' additive_expression
   57                      | relational_expression • '>' additive_expression
   58                      | relational_expression • "<=" additive_expression
   59                      | relational_expression • ">=" additive_expression

    "<="  shift, and go to state 85
    ">="  shift, and go to state 86
    '<'   shift, and go to state 87
    '>'   shift, and go to state 88

    $default  reduce using rule 52 (equality_expression)


State 61

   55 relational_expression: additive_expression •
   61 additive_expression: additive_expression • '+' multiplicative_expression
   62                    | additive_expression • '-' multiplicative_expression

    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    $default  reduce using rule 55 (relational_expression)


State 62

   60 additive_expression: multiplicative_expression •
   64 multiplicative_expression: multiplicative_expression • '*' unary_expression
   65                          | multiplicative_expression • '/' unary_expression
   66                          | multiplicative_expression • '%' unary_expression

    '*'  shift, and go to state 91
    '/'  shift, and go to state 92
    '%'  shift, and go to state 93

    $default  reduce using rule 60 (additive_expression)


State 63

   63 multiplicative_expression: unary_expression •

    $default  reduce using rule 63 (multiplicative_expression)


State 64

   67 unary_expression: primary_expression •

    $default  reduce using rule 67 (unary_expression)


State 65

   46 iterative_struct: "while" '(' • expression ')' command_block

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    expression                 go to state 94
    logical_or_expression      go to state 57
    logical_and_expression     go to state 58
    equality_expression        go to state 59
    relational_expression      go to state 60
    additive_expression        go to state 61
    multiplicative_expression  go to state 62
    unary_expression           go to state 63
    primary_expression         go to state 64


State 66

   35 attribution_command: "identifier" ":=" • expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    expression                 go to state 95
    logical_or_expression      go to state 57
    logical_and_expression     go to state 58
    equality_expression        go to state 59
    relational_expression      go to state 60
    additive_expression        go to state 61
    multiplicative_expression  go to state 62
    unary_expression           go to state 63
    primary_expression         go to state 64


State 67

   36 function_call: "identifier" '(' • args ')'

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    $default  reduce using rule 39 (args)

    function_call              go to state 55
    args                       go to state 96
    expression                 go to state 97
    logical_or_expression      go to state 57
    logical_and_expression     go to state 58
    equality_expression        go to state 59
    relational_expression      go to state 60
    additive_expression        go to state 61
    multiplicative_expression  go to state 62
    unary_expression           go to state 63
    primary_expression         go to state 64


State 68

   17 command_block: '[' command_sequence ']' •

    $default  reduce using rule 17 (command_block)


State 69

   20 command_sequence: simple_command command_sequence •

    $default  reduce using rule 20 (command_sequence)


State 70

   11 optional_parameter_list: "with" parameter_list •
   14 parameter_list: parameter_list • ',' parameter

    ','  shift, and go to state 73

    $default  reduce using rule 11 (optional_parameter_list)


State 71

   15 parameter: "identifier" ":=" • var_type

    "decimal"  shift, and go to state 19
    "integer"  shift, and go to state 20

    var_type  go to state 98


State 72

    9 header: "identifier" "->" var_type optional_parameter_list ":=" •

    $default  reduce using rule 9 (header)


State 73

   14 parameter_list: parameter_list ',' • parameter

    "identifier"  shift, and go to state 42

    parameter  go to state 99


State 74

   28 variable_declaration_with_instantiation: "variable" "identifier" ":=" • var_type optional_instantiation

    "decimal"  shift, and go to state 19
    "integer"  shift, and go to state 20

    var_type  go to state 100


State 75

   43 conditional_struct: "if" '(' expression • ')' command_block else_block

    ')'  shift, and go to state 101


State 76

   74 primary_expression: '(' expression • ')'

    ')'  shift, and go to state 102


State 77

   69 unary_expression: '+' unary_expression •

    $default  reduce using rule 69 (unary_expression)


State 78

   70 unary_expression: '-' unary_expression •

    $default  reduce using rule 70 (unary_expression)


State 79

   68 unary_expression: '!' unary_expression •

    $default  reduce using rule 68 (unary_expression)


State 80

   40 return_command: "return" expression ":=" • var_type

    "decimal"  shift, and go to state 19
    "integer"  shift, and go to state 20

    var_type  go to state 103


State 81

   49 logical_or_expression: logical_or_expression '|' • logical_and_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    logical_and_expression     go to state 104
    equality_expression        go to state 59
    relational_expression      go to state 60
    additive_expression        go to state 61
    multiplicative_expression  go to state 62
    unary_expression           go to state 63
    primary_expression         go to state 64


State 82

   51 logical_and_expression: logical_and_expression '&' • equality_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    equality_expression        go to state 105
    relational_expression      go to state 60
    additive_expression        go to state 61
    multiplicative_expression  go to state 62
    unary_expression           go to state 63
    primary_expression         go to state 64


State 83

   53 equality_expression: equality_expression "==" • relational_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    relational_expression      go to state 106
    additive_expression        go to state 61
    multiplicative_expression  go to state 62
    unary_expression           go to state 63
    primary_expression         go to state 64


State 84

   54 equality_expression: equality_expression "!=" • relational_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    relational_expression      go to state 107
    additive_expression        go to state 61
    multiplicative_expression  go to state 62
    unary_expression           go to state 63
    primary_expression         go to state 64


State 85

   58 relational_expression: relational_expression "<=" • additive_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    additive_expression        go to state 108
    multiplicative_expression  go to state 62
    unary_expression           go to state 63
    primary_expression         go to state 64


State 86

   59 relational_expression: relational_expression ">=" • additive_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    additive_expression        go to state 109
    multiplicative_expression  go to state 62
    unary_expression           go to state 63
    primary_expression         go to state 64


State 87

   56 relational_expression: relational_expression '<' • additive_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    additive_expression        go to state 110
    multiplicative_expression  go to state 62
    unary_expression           go to state 63
    primary_expression         go to state 64


State 88

   57 relational_expression: relational_expression '>' • additive_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    additive_expression        go to state 111
    multiplicative_expression  go to state 62
    unary_expression           go to state 63
    primary_expression         go to state 64


State 89

   61 additive_expression: additive_expression '+' • multiplicative_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    multiplicative_expression  go to state 112
    unary_expression           go to state 63
    primary_expression         go to state 64


State 90

   62 additive_expression: additive_expression '-' • multiplicative_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call              go to state 55
    multiplicative_expression  go to state 113
    unary_expression           go to state 63
    primary_expression         go to state 64


State 91

   64 multiplicative_expression: multiplicative_expression '*' • unary_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call       go to state 55
    unary_expression    go to state 114
    primary_expression  go to state 64


State 92

   65 multiplicative_expression: multiplicative_expression '/' • unary_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call       go to state 55
    unary_expression    go to state 115
    primary_expression  go to state 64


State 93

   66 multiplicative_expression: multiplicative_expression '%' • unary_expression

    "identifier"       shift, and go to state 48
    "integer literal"  shift, and go to state 49
    "decimal literal"  shift, and go to state 50
    '('                shift, and go to state 51
    '+'                shift, and go to state 52
    '-'                shift, and go to state 53
    '!'                shift, and go to state 54

    function_call       go to state 55
    unary_expression    go to state 116
    primary_expression  go to state 64


State 94

   46 iterative_struct: "while" '(' expression • ')' command_block

    ')'  shift, and go to state 117


State 95

   35 attribution_command: "identifier" ":=" expression •

    $default  reduce using rule 35 (attribution_command)


State 96

   36 function_call: "identifier" '(' args • ')'

    ')'  shift, and go to state 118


State 97

   37 args: expression •
   38     | expression • ',' args

    ','  shift, and go to state 119

    $default  reduce using rule 37 (args)


State 98

   15 parameter: "identifier" ":=" var_type •

    $default  reduce using rule 15 (parameter)


State 99

   14 parameter_list: parameter_list ',' parameter •

    $default  reduce using rule 14 (parameter_list)


State 100

   28 variable_declaration_with_instantiation: "variable" "identifier" ":=" var_type • optional_instantiation

    "with"  shift, and go to state 120

    $default  reduce using rule 32 (optional_instantiation)

    optional_instantiation  go to state 121


State 101

   43 conditional_struct: "if" '(' expression ')' • command_block else_block

    '['  shift, and go to state 15

    command_block  go to state 122


State 102

   74 primary_expression: '(' expression ')' •

    $default  reduce using rule 74 (primary_expression)


State 103

   40 return_command: "return" expression ":=" var_type •

    $default  reduce using rule 40 (return_command)


State 104

   49 logical_or_expression: logical_or_expression '|' logical_and_expression •
   51 logical_and_expression: logical_and_expression • '&' equality_expression

    '&'  shift, and go to state 82

    $default  reduce using rule 49 (logical_or_expression)


State 105

   51 logical_and_expression: logical_and_expression '&' equality_expression •
   53 equality_expression: equality_expression • "==" relational_expression
   54                    | equality_expression • "!=" relational_expression

    "=="  shift, and go to state 83
    "!="  shift, and go to state 84

    $default  reduce using rule 51 (logical_and_expression)


State 106

   53 equality_expression: equality_expression "==" relational_expression •
   56 relational_expression: relational_expression • '<' additive_expression
   57                      | relational_expression • '>' additive_expression
   58                      | relational_expression • "<=" additive_expression
   59                      | relational_expression • ">=" additive_expression

    "<="  shift, and go to state 85
    ">="  shift, and go to state 86
    '<'   shift, and go to state 87
    '>'   shift, and go to state 88

    $default  reduce using rule 53 (equality_expression)


State 107

   54 equality_expression: equality_expression "!=" relational_expression •
   56 relational_expression: relational_expression • '<' additive_expression
   57                      | relational_expression • '>' additive_expression
   58                      | relational_expression • "<=" additive_expression
   59                      | relational_expression • ">=" additive_expression

    "<="  shift, and go to state 85
    ">="  shift, and go to state 86
    '<'   shift, and go to state 87
    '>'   shift, and go to state 88

    $default  reduce using rule 54 (equality_expression)


State 108

   58 relational_expression: relational_expression "<=" additive_expression •
   61 additive_expression: additive_expression • '+' multiplicative_expression
   62                    | additive_expression • '-' multiplicative_expression

    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    $default  reduce using rule 58 (relational_expression)


State 109

   59 relational_expression: relational_expression ">=" additive_expression •
   61 additive_expression: additive_expression • '+' multiplicative_expression
   62                    | additive_expression • '-' multiplicative_expression

    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    $default  reduce using rule 59 (relational_expression)


State 110

   56 relational_expression: relational_expression '<' additive_expression •
   61 additive_expression: additive_expression • '+' multiplicative_expression
   62                    | additive_expression • '-' multiplicative_expression

    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    $default  reduce using rule 56 (relational_expression)


State 111

   57 relational_expression: relational_expression '>' additive_expression •
   61 additive_expression: additive_expression • '+' multiplicative_expression
   62                    | additive_expression • '-' multiplicative_expression

    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    $default  reduce using rule 57 (relational_expression)


State 112

   61 additive_expression: additive_expression '+' multiplicative_expression •
   64 multiplicative_expression: multiplicative_expression • '*' unary_expression
   65                          | multiplicative_expression • '/' unary_expression
   66                          | multiplicative_expression • '%' unary_expression

    '*'  shift, and go to state 91
    '/'  shift, and go to state 92
    '%'  shift, and go to state 93

    $default  reduce using rule 61 (additive_expression)


State 113

   62 additive_expression: additive_expression '-' multiplicative_expression •
   64 multiplicative_expression: multiplicative_expression • '*' unary_expression
   65                          | multiplicative_expression • '/' unary_expression
   66                          | multiplicative_expression • '%' unary_expression

    '*'  shift, and go to state 91
    '/'  shift, and go to state 92
    '%'  shift, and go to state 93

    $default  reduce using rule 62 (additive_expression)


State 114

   64 multiplicative_expression: multiplicative_expression '*' unary_expression •

    $default  reduce using rule 64 (multiplicative_expression)


State 115

   65 multiplicative_expression: multiplicative_expression '/' unary_expression •

    $default  reduce using rule 65 (multiplicative_expression)


State 116

   66 multiplicative_expression: multiplicative_expression '%' unary_expression •

    $default  reduce using rule 66 (multiplicative_expression)


State 117

   46 iterative_struct: "while" '(' expression ')' • command_block

    '['  shift, and go to state 15

    command_block  go to state 123


State 118
